impr: major improvements based on wallet-service improvements
