# src/main/kotlin/dev/erickvieira/ppcc/service/user/extension/PageRequest.extensions.kt
@@ -1,6 +1,7 @@
 package dev.erickvieira.ppcc.service.user.extension
 
 import dev.erickvieira.ppcc.service.user.web.api.model.Direction
+import dev.erickvieira.ppcc.service.user.web.api.model.UserFields
 import org.springframework.data.domain.PageRequest
 import org.springframework.data.domain.Sort
 
@@ -10,6 +11,6 @@ fun PageRequest(
     pagination["page"] as Int? ?: 0,
     pagination["size"] as Int? ?: 20,
     Sort
-        .by(pagination["sort"] as String? ?: "name")
-        .let { if (pagination["direction"] == Direction.DESC) it.descending() else it.ascending() }
+        .by((pagination["sort"] as UserFields? ?: UserFields.fullName).value)
+        .let { if (pagination["direction"] == Direction.desc) it.descending() else it.ascending() }
 )
